# xblock-configurable-lti-consumer

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  setup.cfg  setup.py
.circleci/: config.yml
config/: settings.yml.dist
config/cms/: docker_run_development.py
config/lms/: docker_run_development.py
configurable_lti_consumer/: __init__.py  configurable_lti_consumer.py  defaults.py  exceptions.py  load_class.py  utils.py
configurable_lti_consumer/static/js/: configurable_xblock_lti_consumer.js
configurable_lti_consumer/templates/html/: lti_iframe.html  student.html
docker/files/edx/app/edxapp/edx-platform/cms/djangoapps/contentstore/views/: component.py
