;;
;; FUN package
;;
[metadata]
name = configurable_lti_consumer-xblock
version = 1.0.0-rc.1
description = This Xblock adds configurability over the original lti_consumer XBlock from edx
long_description = file: README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/xblock-configurable-lti-consumer
license= AGPL 3.0
keywords = Django, Open edX, MOOC, XBlock
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 1.8
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
dependency_links =
    https://github.com/edx/xblock-lti-consumer/tarball/v1.1.8#egg=lti_consumer-xblock-1.1.8
include_package_data = true
install_requires =
    lti_consumer-xblock>=1.1.8
packages = configurable_lti_consumer
zip_safe = False

[options.extras_require]
dev =
    twine==1.11.0

[options.entry_points]
xblock.v1 =
    lti_consumer = configurable_lti_consumer:ConfigurableLtiConsumerXBlock

[options.package_data]
configurable_lti_consumer =
    templates/html/*.html
    templates/xml/*.xml

[wheel]
universal = 1

[pep8]
ignore=E501
max_line_length=120
exclude=settings
